Fixed header links jump issue.

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -81,7 +81,7 @@ article {
 .anchor-padding:before {
   display: block;
   content: " ";
-  height: 70px;  /* Give height of your fixed element */
+  height: 80px;  /* Give height of your fixed element */
   margin-top: -70px; /* Give negative margin of your fixed element */
   visibility: hidden;
 }
@@ -95,22 +95,3 @@ article {
 }
 
 
-
-
-/* https://css-tricks.com/viewport-sized-typography/
-
-h1 {
-  font-size: 5.9vw;
-}
-h2 {
-  font-size: 3.0vh;
-}
-p {
-  font-size: 2vmin;
-}
-
-a {
-  font-size: 2vmin;
-}
-
-*/
